minimum buildable cli

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["James Ravenscroft <ravenscroftj@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.6.1"
+python = "^3.6"
 websockets = "^8.1"
 click = "^7.1.2"
 asyncio = "^3.4.3"
@@ -21,3 +21,6 @@ flake8 = "^3.8.4"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+sapientacli = 'sapientacli:main'
